Add basic authorise login endpoint
