# gen/http/invoice/server/paths.go
@@ -7,7 +7,12 @@
 
 package server
 
-// CreateAccountInvoicePath returns the URL path to the invoice service create-account HTTP endpoint.
+// CreateAccountInvoicePath returns the URL path to the invoice service CreateAccount HTTP endpoint.
 func CreateAccountInvoicePath() string {
 	return "/create-account"
+}
+
+// AuthoriseLoginInvoicePath returns the URL path to the invoice service AuthoriseLogin HTTP endpoint.
+func AuthoriseLoginInvoicePath() string {
+	return "/tokens"
 }
