# gen/http/invoice/server/server.go
@@ -20,6 +20,7 @@ import (
 type Server struct {
 	Mounts             []*MountPoint
 	CreateAccount      http.Handler
+	AuthoriseLogin     http.Handler
 	GenHTTPOpenapiJSON http.Handler
 }
 
@@ -61,9 +62,11 @@ func New(
 	return &Server{
 		Mounts: []*MountPoint{
 			{"CreateAccount", "POST", "/create-account"},
+			{"AuthoriseLogin", "POST", "/tokens"},
 			{"./gen/http/openapi.json", "GET", "/openapi.json"},
 		},
 		CreateAccount:      NewCreateAccountHandler(e.CreateAccount, mux, decoder, encoder, errhandler, formatter),
+		AuthoriseLogin:     NewAuthoriseLoginHandler(e.AuthoriseLogin, mux, decoder, encoder, errhandler, formatter),
 		GenHTTPOpenapiJSON: http.FileServer(fileSystemGenHTTPOpenapiJSON),
 	}
 }
@@ -74,11 +77,13 @@ func (s *Server) Service() string { return "invoice" }
 // Use wraps the server handlers with the given middleware.
 func (s *Server) Use(m func(http.Handler) http.Handler) {
 	s.CreateAccount = m(s.CreateAccount)
+	s.AuthoriseLogin = m(s.AuthoriseLogin)
 }
 
 // Mount configures the mux to serve the invoice endpoints.
 func Mount(mux goahttp.Muxer, h *Server) {
 	MountCreateAccountHandler(mux, h.CreateAccount)
+	MountAuthoriseLoginHandler(mux, h.AuthoriseLogin)
 	MountGenHTTPOpenapiJSON(mux, goahttp.Replace("", "/./gen/http/openapi.json", h.GenHTTPOpenapiJSON))
 }
 
@@ -88,7 +93,7 @@ func (s *Server) Mount(mux goahttp.Muxer) {
 }
 
 // MountCreateAccountHandler configures the mux to serve the "invoice" service
-// "create-account" endpoint.
+// "CreateAccount" endpoint.
 func MountCreateAccountHandler(mux goahttp.Muxer, h http.Handler) {
 	f, ok := h.(http.HandlerFunc)
 	if !ok {
@@ -100,7 +105,7 @@ func MountCreateAccountHandler(mux goahttp.Muxer, h http.Handler) {
 }
 
 // NewCreateAccountHandler creates a HTTP handler which loads the HTTP request
-// and calls the "invoice" service "create-account" endpoint.
+// and calls the "invoice" service "CreateAccount" endpoint.
 func NewCreateAccountHandler(
 	endpoint goa.Endpoint,
 	mux goahttp.Muxer,
@@ -116,7 +121,58 @@ func NewCreateAccountHandler(
 	)
 	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		ctx := context.WithValue(r.Context(), goahttp.AcceptTypeKey, r.Header.Get("Accept"))
-		ctx = context.WithValue(ctx, goa.MethodKey, "create-account")
+		ctx = context.WithValue(ctx, goa.MethodKey, "CreateAccount")
+		ctx = context.WithValue(ctx, goa.ServiceKey, "invoice")
+		payload, err := decodeRequest(r)
+		if err != nil {
+			if err := encodeError(ctx, w, err); err != nil {
+				errhandler(ctx, w, err)
+			}
+			return
+		}
+		res, err := endpoint(ctx, payload)
+		if err != nil {
+			if err := encodeError(ctx, w, err); err != nil {
+				errhandler(ctx, w, err)
+			}
+			return
+		}
+		if err := encodeResponse(ctx, w, res); err != nil {
+			errhandler(ctx, w, err)
+		}
+	})
+}
+
+// MountAuthoriseLoginHandler configures the mux to serve the "invoice" service
+// "AuthoriseLogin" endpoint.
+func MountAuthoriseLoginHandler(mux goahttp.Muxer, h http.Handler) {
+	f, ok := h.(http.HandlerFunc)
+	if !ok {
+		f = func(w http.ResponseWriter, r *http.Request) {
+			h.ServeHTTP(w, r)
+		}
+	}
+	mux.Handle("POST", "/tokens", f)
+}
+
+// NewAuthoriseLoginHandler creates a HTTP handler which loads the HTTP request
+// and calls the "invoice" service "AuthoriseLogin" endpoint.
+func NewAuthoriseLoginHandler(
+	endpoint goa.Endpoint,
+	mux goahttp.Muxer,
+	decoder func(*http.Request) goahttp.Decoder,
+	encoder func(context.Context, http.ResponseWriter) goahttp.Encoder,
+	errhandler func(context.Context, http.ResponseWriter, error),
+	formatter func(err error) goahttp.Statuser,
+) http.Handler {
+	var (
+		decodeRequest  = DecodeAuthoriseLoginRequest(mux, decoder)
+		encodeResponse = EncodeAuthoriseLoginResponse(encoder)
+		encodeError    = EncodeAuthoriseLoginError(encoder, formatter)
+	)
+	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		ctx := context.WithValue(r.Context(), goahttp.AcceptTypeKey, r.Header.Get("Accept"))
+		ctx = context.WithValue(ctx, goa.MethodKey, "AuthoriseLogin")
 		ctx = context.WithValue(ctx, goa.ServiceKey, "invoice")
 		payload, err := decodeRequest(r)
 		if err != nil {
