# gen/http/openapi.yaml
@@ -17,10 +17,11 @@ paths:
     post:
       tags:
       - invoice
-      summary: create-account invoice
-      operationId: invoice#create-account
+      summary: CreateAccount invoice
+      description: Create an account by email address and password.
+      operationId: invoice#CreateAccount
       parameters:
-      - name: Create-AccountRequestBody
+      - name: CreateAccountRequestBody
         in: body
         required: true
         schema:
@@ -63,8 +64,107 @@ paths:
             type: file
       schemes:
       - http
+  /tokens:
+    post:
+      tags:
+      - invoice
+      summary: AuthoriseLogin invoice
+      description: Create an account by email address and password.
+      operationId: invoice#AuthoriseLogin
+      parameters:
+      - name: grant_type
+        in: query
+        required: false
+        type: string
+        default: access_token
+        enum:
+        - access_token
+        - refresh_token
+      - name: AuthoriseLoginRequestBody
+        in: body
+        required: true
+        schema:
+          $ref: '#/definitions/InvoiceAuthoriseLoginRequestBody'
+          required:
+          - email
+          - password
+      responses:
+        "200":
+          description: OK response.
+          schema:
+            $ref: '#/definitions/InvoiceAuthoriseLoginResponseBody'
+            required:
+            - accessToken
+            - refreshToken
+            - accessExpiryTime
+            - refreshExpiryTime
+            - accessExpiryTimeStamp
+            - refreshExpiryTimeStamp
+        "400":
+          description: Bad Request response.
+          schema:
+            $ref: '#/definitions/InvoiceAuthoriseLoginBadrequestResponseBody'
+        "401":
+          description: Unauthorized response.
+          schema:
+            $ref: '#/definitions/InvoiceAuthoriseLoginUnauthorizedResponseBody'
+        "404":
+          description: Not Found response.
+          schema:
+            $ref: '#/definitions/InvoiceAuthoriseLoginNotfoundResponseBody'
+        "500":
+          description: Internal Server Error response.
+          schema:
+            $ref: '#/definitions/InvoiceAuthoriseLoginServererrorResponseBody'
+      schemes:
+      - http
 definitions:
-  InvoiceCreateAccountBadrequestResponseBody:
+  InvoiceAuthoriseLoginBadrequestResponseBody:
+    title: 'Mediatype identifier: application/vnd.goa.error; view=default'
+    type: object
+    properties:
+      fault:
+        type: boolean
+        description: Is the error a server-side fault?
+        example: false
+      id:
+        type: string
+        description: ID is a unique identifier for this particular occurrence of the
+          problem.
+        example: 123abc
+      message:
+        type: string
+        description: Message is a human-readable explanation specific to this occurrence
+          of the problem.
+        example: parameter 'p' must be an integer
+      name:
+        type: string
+        description: Name is the name of this class of errors.
+        example: bad_request
+      temporary:
+        type: boolean
+        description: Is the error temporary?
+        example: true
+      timeout:
+        type: boolean
+        description: Is the error a timeout?
+        example: true
+    description: AuthoriseLogin_badrequest_Response_Body result type (default view)
+    example:
+      fault: true
+      id: 123abc
+      message: parameter 'p' must be an integer
+      name: bad_request
+      temporary: false
+      timeout: true
+    required:
+    - name
+    - id
+    - message
+    - temporary
+    - timeout
+    - fault
+  InvoiceAuthoriseLoginNotfoundResponseBody:
     title: 'Mediatype identifier: application/vnd.goa.error; view=default'
     type: object
     properties:
@@ -93,15 +193,206 @@ definitions:
       timeout:
         type: boolean
         description: Is the error a timeout?
-        example: false
-    description: create-account_badrequest_response_body result type (default view)
+        example: true
+    description: AuthoriseLogin_notfound_Response_Body result type (default view)
     example:
       fault: true
       id: 123abc
       message: parameter 'p' must be an integer
       name: bad_request
       temporary: true
-      timeout: false
+      timeout: true
+    required:
+    - name
+    - id
+    - message
+    - temporary
+    - timeout
+    - fault
+  InvoiceAuthoriseLoginRequestBody:
+    title: InvoiceAuthoriseLoginRequestBody
+    type: object
+    properties:
+      email:
+        type: string
+        description: User email
+        example: Aut corporis earum dolore.
+      password:
+        type: string
+        description: User password
+        example: Quam officia.
+    example:
+      email: Repellat velit neque.
+      password: Voluptatem ut officiis eius id quod quae.
+    required:
+    - email
+    - password
+  InvoiceAuthoriseLoginResponseBody:
+    title: InvoiceAuthoriseLoginResponseBody
+    type: object
+    properties:
+      accessExpiryTime:
+        type: integer
+        example: 9024632453247275197
+        format: int64
+      accessExpiryTimeStamp:
+        type: string
+        example: Exercitationem in.
+      accessToken:
+        type: string
+        example: eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJzaWQiOiJkYmViMjlhYTMyYjg0MTMxYTA0NjY4MDAyNzAxNWEwZSIsInJvbGUiOlsiQWRtaW5pc3RyYXRvcnMiLCJSZWdpc3RlcmVkIFVzZXJzIiwiU3Vic2NyaWJlcnMiXSwiaXNzIjoidGVzdHNpdGVjZS5sdmgubWUiLCJleHAiOjE0NTA4MzU2ODMsIm5iZiI6MTQ1MDgzMTc4M30.Yf3mmBJ8nV_IozqvvLc8L34dDklU2J7z0uXn3jsICp0
+      refreshExpiryTime:
+        type: integer
+        example: 8370629711617933064
+        format: int64
+      refreshExpiryTimeStamp:
+        type: string
+        example: Accusamus quasi.
+      refreshToken:
+        type: string
+        example: Vel ut quia est deleniti quae aut.
+    example:
+      accessExpiryTime: 7843115956462264338
+      accessExpiryTimeStamp: Esse repellendus.
+      accessToken: eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJzaWQiOiJkYmViMjlhYTMyYjg0MTMxYTA0NjY4MDAyNzAxNWEwZSIsInJvbGUiOlsiQWRtaW5pc3RyYXRvcnMiLCJSZWdpc3RlcmVkIFVzZXJzIiwiU3Vic2NyaWJlcnMiXSwiaXNzIjoidGVzdHNpdGVjZS5sdmgubWUiLCJleHAiOjE0NTA4MzU2ODMsIm5iZiI6MTQ1MDgzMTc4M30.Yf3mmBJ8nV_IozqvvLc8L34dDklU2J7z0uXn3jsICp0
+      refreshExpiryTime: 1334392219278916415
+      refreshExpiryTimeStamp: Reiciendis magni et et qui.
+      refreshToken: Sunt totam temporibus quibusdam quasi autem possimus.
+    required:
+    - accessToken
+    - refreshToken
+    - accessExpiryTime
+    - refreshExpiryTime
+    - accessExpiryTimeStamp
+    - refreshExpiryTimeStamp
+  InvoiceAuthoriseLoginServererrorResponseBody:
+    title: 'Mediatype identifier: application/vnd.goa.error; view=default'
+    type: object
+    properties:
+      fault:
+        type: boolean
+        description: Is the error a server-side fault?
+        example: true
+      id:
+        type: string
+        description: ID is a unique identifier for this particular occurrence of the
+          problem.
+        example: 123abc
+      message:
+        type: string
+        description: Message is a human-readable explanation specific to this occurrence
+          of the problem.
+        example: parameter 'p' must be an integer
+      name:
+        type: string
+        description: Name is the name of this class of errors.
+        example: bad_request
+      temporary:
+        type: boolean
+        description: Is the error temporary?
+        example: false
+      timeout:
+        type: boolean
+        description: Is the error a timeout?
+        example: false
+    description: AuthoriseLogin_servererror_Response_Body result type (default view)
+    example:
+      fault: false
+      id: 123abc
+      message: parameter 'p' must be an integer
+      name: bad_request
+      temporary: true
+      timeout: true
+    required:
+    - name
+    - id
+    - message
+    - temporary
+    - timeout
+    - fault
+  InvoiceAuthoriseLoginUnauthorizedResponseBody:
+    title: 'Mediatype identifier: application/vnd.goa.error; view=default'
+    type: object
+    properties:
+      fault:
+        type: boolean
+        description: Is the error a server-side fault?
+        example: false
+      id:
+        type: string
+        description: ID is a unique identifier for this particular occurrence of the
+          problem.
+        example: 123abc
+      message:
+        type: string
+        description: Message is a human-readable explanation specific to this occurrence
+          of the problem.
+        example: parameter 'p' must be an integer
+      name:
+        type: string
+        description: Name is the name of this class of errors.
+        example: bad_request
+      temporary:
+        type: boolean
+        description: Is the error temporary?
+        example: true
+      timeout:
+        type: boolean
+        description: Is the error a timeout?
+        example: false
+    description: AuthoriseLogin_unauthorized_Response_Body result type (default view)
+    example:
+      fault: false
+      id: 123abc
+      message: parameter 'p' must be an integer
+      name: bad_request
+      temporary: false
+      timeout: true
+    required:
+    - name
+    - id
+    - message
+    - temporary
+    - timeout
+    - fault
+  InvoiceCreateAccountBadrequestResponseBody:
+    title: 'Mediatype identifier: application/vnd.goa.error; view=default'
+    type: object
+    properties:
+      fault:
+        type: boolean
+        description: Is the error a server-side fault?
+        example: true
+      id:
+        type: string
+        description: ID is a unique identifier for this particular occurrence of the
+          problem.
+        example: 123abc
+      message:
+        type: string
+        description: Message is a human-readable explanation specific to this occurrence
+          of the problem.
+        example: parameter 'p' must be an integer
+      name:
+        type: string
+        description: Name is the name of this class of errors.
+        example: bad_request
+      temporary:
+        type: boolean
+        description: Is the error temporary?
+        example: true
+      timeout:
+        type: boolean
+        description: Is the error a timeout?
+        example: false
+    description: CreateAccount_badrequest_Response_Body result type (default view)
+    example:
+      fault: false
+      id: 123abc
+      message: parameter 'p' must be an integer
+      name: bad_request
+      temporary: false
+      timeout: true
     required:
     - name
     - id
@@ -138,10 +429,10 @@ definitions:
       timeout:
         type: boolean
         description: Is the error a timeout?
-        example: true
-    description: create-account_notfound_response_body result type (default view)
+        example: false
+    description: CreateAccount_notfound_Response_Body result type (default view)
     example:
-      fault: false
+      fault: true
       id: 123abc
       message: parameter 'p' must be an integer
       name: bad_request
@@ -161,24 +452,24 @@ definitions:
       email:
         type: string
         description: Email address of the user
-        example: Ut hic et quaerat quasi.
+        example: Autem quibusdam non nisi alias voluptatem necessitatibus.
       id:
         type: string
         description: ID of the user
-        example: Voluptas libero et quas nulla.
+        example: Sed soluta voluptates.
       name:
         type: string
         description: Full name of the user
-        example: Nam est fugiat qui.
+        example: Facilis quibusdam et alias.
       password:
         type: string
         description: Password of the user. This is never returned to the client.
-        example: Et dolore nihil laborum facilis libero perferendis.
+        example: Debitis nemo assumenda aperiam natus.
     example:
-      email: Fuga voluptas et ab sed.
-      id: Quis quia rerum autem est culpa.
-      name: Earum voluptatem architecto ea et.
-      password: Corrupti ad nam velit architecto illum.
+      email: At ipsum eveniet autem cupiditate eaque.
+      id: Ex pariatur odio deserunt.
+      name: Quidem dolorem libero velit.
+      password: Vero molestiae eius.
     required:
     - email
     - name
@@ -190,7 +481,7 @@ definitions:
       fault:
         type: boolean
         description: Is the error a server-side fault?
-        example: true
+        example: false
       id:
         type: string
         description: ID is a unique identifier for this particular occurrence of the
@@ -212,15 +503,15 @@ definitions:
       timeout:
         type: boolean
         description: Is the error a timeout?
-        example: false
-    description: create-account_servererror_response_body result type (default view)
+        example: true
+    description: CreateAccount_servererror_Response_Body result type (default view)
     example:
-      fault: true
+      fault: false
       id: 123abc
       message: parameter 'p' must be an integer
       name: bad_request
-      temporary: false
-      timeout: false
+      temporary: true
+      timeout: true
     required:
     - name
     - id
@@ -235,7 +526,7 @@ definitions:
       fault:
         type: boolean
         description: Is the error a server-side fault?
-        example: false
+        example: true
       id:
         type: string
         description: ID is a unique identifier for this particular occurrence of the
@@ -257,15 +548,15 @@ definitions:
       timeout:
         type: boolean
         description: Is the error a timeout?
-        example: true
-    description: create-account_unauthorized_response_body result type (default view)
+        example: false
+    description: CreateAccount_unauthorized_Response_Body result type (default view)
     example:
-      fault: false
+      fault: true
       id: 123abc
       message: parameter 'p' must be an integer
       name: bad_request
       temporary: true
-      timeout: false
+      timeout: true
     required:
     - name
     - id
